[gd_scene load_steps=4 format=3 uid="uid://cswjddao7c7gd"]

[ext_resource type="Script" path="res://props/Haus/haus.gd" id="1_10jd8"]
[ext_resource type="PackedScene" uid="uid://bh4y57fljt8t1" path="res://props/HausGemeinsamkeiten/haus_gemeinsamkeiten.tscn" id="2_w0gq1"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_v57pw"]

[node name="Haus" type="StaticBody2D"]
material = SubResource("CanvasItemMaterial_v57pw")
script = ExtResource("1_10jd8")

[node name="haus_gemeinsamkeiten" parent="." instance=ExtResource("2_w0gq1")]

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2(66.75, -13.75)
polygon = PackedVector2Array(-83.75, 29.75, -85.75, -178.25, 86.25, -176.25, 84.25, 185.75, -85.75, 189.75, -217.75, 153.75, -221.75, 25.75)

[connection signal="body_entered" from="haus_gemeinsamkeiten/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="haus_gemeinsamkeiten/Area2D" to="." method="_on_area_2d_body_exited"]

[editable path="haus_gemeinsamkeiten"]
